--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "express": "^4.18.3",
+    "radash": "^12.0.0",
     "socket.io": "^4.7.4",
     "typescript": "^5.3.3"
   }
