--- a/web_client/tsconfig.json
+++ b/web_client/tsconfig.json
@@ -4,6 +4,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "#/*": [
+        "../shared/*"
       ]
     },
     "target": "ES2020",
