--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "@socket.io/admin-ui": "^0.5.1",
     "express": "^4.18.3",
     "radash": "^12.0.0",
     "socket.io": "^4.7.4",
