--- a/web_client/package.json
+++ b/web_client/package.json
@@ -21,6 +21,7 @@
     "radash": "^12.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.2",
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.2.1",
