--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "outDir": "./dist",
     "allowJs": false,
-    "target": "es2020",
+    "target": "ESNext",
     // "alwaysStrict": true,
     // "allowUnreachableCode": false,
     // "noImplicitAny": true,
