--- a/server/.swcrc
+++ b/server/.swcrc
@@ -1,5 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/swcrc",
+  "sourceMaps": "inline",
   "jsc": {
     "parser": {
       "syntax": "typescript",
