--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "moduleResolution": "node",
-    "outDir": "./dist",
+    "outDir": "dist",
     "allowJs": false,
     "target": "ESNext",
     // "alwaysStrict": true,
@@ -16,9 +16,7 @@
     "esModuleInterop": true,
     "noErrorTruncation": true,
     "incremental": true,
-    "skipLibCheck": true
-  },
-  "include": [
-    "./src/**/*"
-  ]
+    "skipLibCheck": true,
+    "inlineSourceMap": true
+  }
 }
