--- a/web_client/package.json
+++ b/web_client/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.344.0",
     "radash": "^12.1.0",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.2",
