--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "radash": "^12.0.0",
     "socket.io": "^4.7.4",
