--- a/server/package.json
+++ b/server/package.json
@@ -4,29 +4,30 @@
   "description": "idea hero web server",
   "main": "src/index.ts",
   "scripts": {
+    "dev": "tsx --watch src/index.ts",
     "build": "swc src --out-dir dist",
-    "typecheck": "tsc --pretty --noEmit",
     "start": "node dist/src/index.js",
-    "dev": "concurrently \"nodemon\" \"tsc -w --pretty --noEmit\"",
+    "typecheck": "tsc --pretty --noEmit",
     "lint": "eslint .  --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@swc/cli": "^0.3.10",
-    "@swc/core": "^1.4.4",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24",
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.1.0"
+    "@swc/cli": "^0.7.2",
+    "@swc/core": "^1.11.21",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
+    "concurrently": "^9.1.2",
+    "nodemon": "^3.1.9"
   },
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "radash": "^12.0.0",
-    "socket.io": "^4.7.4",
-    "typescript": "^5.3.3"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "radashi": "^12.4.0",
+    "socket.io": "^4.8.1",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3"
   }
 }
