--- a/web_client/package.json
+++ b/web_client/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.0",
     "derive-zustand": "^0.0.1",
     "lucide-react": "^0.344.0",
-    "radash": "^12.1.0",
+    "radashi": "^12.4.0",
     "react": "^18.2.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
@@ -49,6 +49,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.1.4"
+    "vite": "^6.3.0"
   }
 }
